Added dashboard_builder and it's epic

--- a/gbdashboard/html/examples/dashboardExample.html
+++ b/gbdashboard/html/examples/dashboardExample.html
@@ -55,17 +55,17 @@
                     </tr>
                     <tr id="Chassis->leftSpeed">
                         <th> leftSpeed </th>
-                        <th> 0.51 </th>
+                        <th> <textarea readonly=""> 1.23 </textarea> </th>
                         <th> options </th>
                     </tr>
                     <tr id="Chassis->rightSpeed">
                         <th> rightSpeed </th>
-                        <th> 0.19 </th>
+                            <th style="width: 1%; white-space: nowrap"> <textarea style="width: 100%" readonly> 1.319 </textarea> </th>
                         <th> options </th>
                     </tr>
                     <tr id="Chassis->Shift">
                         <th> Shift </th>
-                        <th> POWER </th>
+                        <th> <textarea readonly> POWER </textarea> </th>
                         <th> options </th>
                     </tr>
                 </table>
