--- a/gbdashboard/html/examples/dashboardExample.html
+++ b/gbdashboard/html/examples/dashboardExample.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-
     <style>
-
-        .default{
-            width:100%;
-            border:4px solid green;
+        .default {
+            width: 100%;
+            border: 4px solid green;
         }
 
         .inner {
-            width:100%;
-            border:2px solid green;
+            width: 100%;
+            border: 2px solid green;
         }
 
         th {
@@ -19,72 +19,98 @@
             border: 1px solid #0F0F0F;
             font-weight: normal;
         }
-
     </style>
-
-    <meta charset="UTF-8">
-    <title>DashboardName</title>
+    <meta charset="utf-8" />
+    <title>SmarterDashboard</title>
 </head>
+
 <body>
+    <p id="tableName" style="text-align: center; font-size: 48px; line-height: 2px">BruhDashboard</p>
+    <p style="text-align: center; font-size: 22px; line-height: 2px">
 
-<p style="text-align: center; font-size: 48px; line-height: 2px">
+        Description - the quick brown fox jumps over the lazy dog
 
-    TableName
-
-</p>
-<p style="text-align: center; font-size: 22px; line-height: 2px">
-
-    Description - the quick brown fox jumped over the lazy dog
-
-</p>
-
+    </p>
     <table class="default">
-        <tr>
-            <th> Subtable1 </th>
-            <th> Subtable2 </th>
-            <th> Subtable3 </th>
-            <th> Global Options </th>
+        <tr id="headings">
+            <th style="font-size: 30px">SubTable2</th>
+            <th style="font-size: 30px">SubTable1</th>
+            <th style="font-size: 30px">parent</th>
+            <th style="font-size: 30px"> Global Options </th>
         </tr>
-        <tr>
+        <tr id="subtables">
             <th>
-                <table class="inner" id="Chassis">
+                <table id="SubTable2" style="width:100%;             border:2px solid green">
                     <tr>
-                        <th> <b>variableName</b> </th>
-                        <th> <b>variableValue</b> </th>
-                        <th>  </th>
+                        <tr>
+                            <th> <b>Variable Name</b> </th>
+                            <th> <b>Variable Value</b> </th>
+                            <th> </th>
+                        </tr>
                     </tr>
-                    <tr id="Chassis->leftSpeed">
-                        <th> leftSpeed </th>
-                        <th> <textarea readonly=""> 1.23 </textarea> </th>
-                        <th> options </th>
+                    <tr id="SubTable2-&gt;2">
+                        <th style="width: 1%; white-space: nowrap">2</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">bruh</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
                     </tr>
-                    <tr id="Chassis->rightSpeed">
-                        <th> rightSpeed </th>
-                            <th style="width: 1%; white-space: nowrap"> <textarea style="width: 100%" readonly> 1.319 </textarea> </th>
-                        <th> options </th>
-                    </tr>
-                    <tr id="Chassis->Shift">
-                        <th> Shift </th>
-                        <th> <textarea readonly> POWER </textarea> </th>
-                        <th> options </th>
+                    <tr id="SubTable2-&gt;3">
+                        <th style="width: 1%; white-space: nowrap">3</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">moment</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
                     </tr>
                 </table>
             </th>
             <th>
-                <table class="inner">
+                <table id="SubTable1" style="width:100%;             border:2px solid green">
                     <tr>
-                        <th> <b>variableName</b> </th>
-                        <th>  <b>variableValue</b> </th>
-                        <th>  </th>
+                        <tr>
+                            <th> <b>Variable Name</b> </th>
+                            <th> <b>Variable Value</b> </th>
+                            <th> </th>
+                        </tr>
+                    </tr>
+                    <tr id="SubTable1-&gt;1">
+                        <th style="width: 1%; white-space: nowrap">1</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">1</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
+                    </tr>
+                    <tr id="SubTable1-&gt;2">
+                        <th style="width: 1%; white-space: nowrap">2</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">2</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
+                    </tr>
+                    <tr id="SubTable1-&gt;3">
+                        <th style="width: 1%; white-space: nowrap">3</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">3</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
                     </tr>
                 </table>
             </th>
             <th>
-                <table class="inner">
+                <table id="parent" style="width:100%;             border:2px solid green">
                     <tr>
-                        <th> <b>variableName</b> </th>
-                        <th>  <b>variableValue</b> </th>
-                        <th>  </th>
+                        <tr>
+                            <th> <b>Variable Name</b> </th>
+                            <th> <b>Variable Value</b> </th>
+                            <th> </th>
+                        </tr>
+                    </tr>
+                    <tr id="parent-&gt;hmmm">
+                        <th style="width: 1%; white-space: nowrap">hmmm</th>
+                        <th style="width: 1%; white-space: nowrap">
+                            <textarea readonly="" style="width: 100%;">4590</textarea>
+                        </th>
+                        <th style="width: 1%; white-space: nowrap">temp</th>
                     </tr>
                 </table>
             </th>
@@ -93,6 +119,7 @@
             </th>
         </tr>
     </table>
-
 </body>
+<!--<script src="/scripts/updateDashboard.js" type="text/javascript"></script>-->
+
 </html>
