added option to set vision master debug mode

--- a/gbdashboard/html/pi.html
+++ b/gbdashboard/html/pi.html
@@ -6,59 +6,6 @@
     <title>RPi</title>
 </head>
 <body>
-<script>
-    function getSelectedCamera(){
-        return parseInt(document.getElementById('camera').value);
-    }
-    function getSelectedThreshold(){
-        let elem = document.getElementById('thresholds');
-        return elem.options[elem.selectedIndex].value;
-    }
-    function getInputThresholdCode(){
-        return document.getElementById('threshold_code').value;
-    }
-    function setFeedCamera(){
-        get('/set_feed_camera', {camera: getSelectedCamera()});
-    }
-    function leds(state){
-        get('/set_leds', {state:state});
-    }
-    function exposure(state){
-        get('/set_exposure', {raw:(state?11:10), camera:getSelectedCamera()})
-    }
-    function autoExposure(state){
-        get('/set_auto_exposure', {raw:(state?3:1), camera:getSelectedCamera()})
-    }
-    function startVisionMaster(){
-        get('/start_vision_master')
-    }
-    function startGBVisionStream(button){
-        button.disabled = true;
-        let callback = function(){button.disabled = false;}
-        get('/start_gbvision_stream', null, callback, callback);
-    }
-    function setVisionAlgorithm(algo){
-        get('/set_vision_algorithm', {algo: algo})
-    }
-    function setThresholdValue(){
-        get('/set_threshold_value', {name: getSelectedThreshold(), code: getInputThresholdCode()});
-    }
-    get('/get_algorithms_list', null, function(response){
-        let lst = JSON.parse(response);
-        let elem = document.getElementById("algorithms");
-        for(var i in lst){
-            elem.innerHTML += '<option value="' + lst[i] + '">' + lst[i] + '</option>';
-        }
-    })
-    get('/get_all_thresholds', null, function(response){
-        let lst = JSON.parse(response);
-        let elem = document.getElementById("thresholds");
-        for(var i in lst){
-            elem.innerHTML += '<option value="' + lst[i] + '">' + lst[i] + '</option>';
-        }
-    })
-
-</script>
 <table>
     <tr>
         <th>
@@ -78,6 +25,11 @@
     <tr>
         <th>
             Auto Exposure <input type="checkbox" onclick="autoExposure(this.checked)"><br>
+        </th>
+    </tr>
+    <tr>
+        <th>
+            Vision Master Debug Mode <input type="checkbox" onclick="debugMode(this.checked)"><br>
         </th>
     </tr>
     <tr>
@@ -108,5 +60,6 @@
         </th>
     </tr>
 </table>
+<script src="/scripts/pi.js"></script>
 </body>
 </html>
