--- a/gbdashboard/html/pi.html
+++ b/gbdashboard/html/pi.html
@@ -9,7 +9,7 @@
 <table>
     <tr>
         <th>
-            Camera <input type="number" value="0" width="20px" id="camera" onchange="setFeedCamera()">
+            Camera <input type="number" value="0" width="20px" id="camera">
         </th>
     </tr>
     <tr>
@@ -52,11 +52,6 @@
         <th>
             Set Threshold: <select id="thresholds"></select> <input type="text" id="threshold_code">
             <button onclick="setThresholdValue()">Set!</button>
-        </th>
-    </tr>
-    <tr>
-        <th>
-            <img id="feed" src="/video_feed">
         </th>
     </tr>
 </table>
