Can edit data now (only string and double for now though

--- a/gbdashboard/html/index.html
+++ b/gbdashboard/html/index.html
@@ -5,9 +5,11 @@
     <title>GBDashBoard V0.1</title>
 </head>
 <body>
+<center>
 <a href="/pi">Vision Control</a><br>
 <a id="wpi_website_link">WPI RPi Website</a><br>
 <a href="/board">Network Table Boards</a>
+</center>
 <script>
     document.getElementById("wpi_website_link").href='http://' + location.hostname;
 </script>
