added terminal to /pi testing definitely needed

--- a/gbdashboard/html/pi.html
+++ b/gbdashboard/html/pi.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <script src="scripts/requests.js"></script>
+    <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+    <script src="node_modules/xterm/lib/xterm.js"></script>
     <meta charset="UTF-8">
     <title>RPi</title>
 </head>
@@ -61,6 +63,7 @@
         </th>
     </tr>
 </table>
+<div id="terminal"></div>
 <script src="/scripts/pi.js"></script>
 </body>
 </html>
